data/derived/fa15/progs/unify/prog0938.ml.out
Characters 39-40:
  if n < 0 then 7;;
                ^
Error: This expression has type int but an expression was expected of type
         unit
